# drtaint

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  drtaint.c  drtaint.cpp  drtaint.h  drtaint_helper.cpp  drtaint_helper.h  drtaint_shadow.c  drtaint_shadow.h  sample_app.c  sample_app.cpp  sample_app2.cpp  shadow.c  shadow.h  utils.h
app/: draslrharden.cpp  drtaint_only.cpp
scripts/: relocs.py  vis.py
tests/: Makefile  simple_argv  simple_argv.c  simple_code_leaks  simple_code_leaks.c  simple_leaks  simple_leaks.c
tests/bzip2/: bzip2
tests/simple/: simple  simple.s  simple_thumb  simple_thumb.s
tests/simple_argv/: test  test.c
tests/simple_code_leaks/: test  test.c
tests/simple_exploits/: test  test.c
tests/simple_leaks/: test  test.c
tests/simple_syscalls/: test  test.c
